# treedb

./: .gitignore  Cargo.toml  DESIGN.md  PAPERS.md  flake.nix
.github/workflows/: check.yml  safety.yml  test.yml
src/: lib.rs  lru.rs  node.rs  page.rs  pager.rs
src/pager/: arena.rs  cache.rs  mod.rs  page.rs  queue.rs  test.rs
src/pager/queue/: cursor.rs
src/tree/: mod.rs  node.rs
tests/: pager.rs  tree.rs
