[package]
name = "treedb"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
clru = "0.6"
shared_arena = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
zerocopy = "0.7.0-alpha.3"
bytes = { version = "1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
