[package]
name = "treedb"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2"
zerocopy = { version = "0.8", features = ["derive"] }
bytes = { version = "1.8" }
allocator-api2 = "0.2.20"

[dev-dependencies]
tempfile = "3"
